# pipecat-book-qa-voice-agent

./: .gitignore  PLAN.md  README.md
backend/: book_processor.py  bot.py  progress_tracker.py  pyproject.toml  server.py  web_search.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BookUpload.tsx  ChatInterface.tsx  StatusIndicator.tsx  VoiceControl.tsx
frontend/src/hooks/: useWebRTC.ts
frontend/src/styles/: index.css
